# tripwire

./: Cargo.toml
src/: lib.rs  main.rs  trip_event.rs  trip_state.rs
src/web/axum/: echo.rs  mod.rs  server.rs  trip.rs
standalone/: Cargo.toml
